# dis-datagen

./: Makefile  README.md  catgeojson.py  cities.py  cmap2rgb.py  gendata.py  makelinktable.py  pyproject.toml  rastertiles.py
site-src/: index.html
site-src/css/: dimap.css
site-src/js/: colors.js
test-html/: index.html  local-map.html
test-html/js/: colors.js
