[tool.poetry]
name = "dis-datagen"
version = "0.1.0"
description = ""
authors = ["vengroff <vengroff@gmail.com>"]
readme = "README.md"
packages = [{include = "dis_datagen"}]

[tool.poetry.dependencies]
python = "^3.9"
censusdis = "^0.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
